WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59169
Minimize synchronous calls during loading
https://bugs.webkit.org/show_bug.cgi?id=59169
Summary
Minimize synchronous calls during loading
Alexey Proskuryakov
Reported
2011-04-21 20:18:21 PDT
r84526
added synchronous calls to web process to discard marked text when selection changes. The code was structured so that the same call was made when navigating to a new page, which is obviously unnecessary, as everything in Editor best reset anyway. Unfortunately, CoreIPC delivers sync and async calls out of order while serving a sync call in other direction, causing havoc, freezes and crashes as the UI process got confused about web process state. So, we should minimize sync calls, especially when we know that something else is happening in the web process.
Attachments
proposed patch
(1.69 KB, patch)
2011-04-21 20:22 PDT
,
Alexey Proskuryakov
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-04-21 20:22:30 PDT
Created
attachment 90659
[details]
proposed patch
Alexey Proskuryakov
Comment 2
2011-04-21 21:26:45 PDT
Committed <
http://trac.webkit.org/changeset/84598
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug