        Minimize synchronous calls during loading         https://bugs.webkit.org/show_bug.cgi?id=59169

<rdar://problem/9320128> REGRESSION(r84526): WK2 windows unresponsive

        * UIProcess/API/mac/WKView.mm:
        (-[WKView resignFirstResponder]):
        (-[WKView _resetTextInputState]):
        Made _resetTextInputState deal with client side state only, letting Editor composition be
        discarded more discriminately.



git-svn-id: svn://svn.chromium.org/blink/trunk@84598 bbb929c8-8fbe-4397-9dbb-9b2b20218538